@@ -2,7 +2,7 @@
  * ntfs.h - Defines for NTFS Linux kernel driver. Part of the Linux-NTFS
  *	    project.
  *
- * Copyright (c) 2001,2002 Anton Altaparmakov.
+ * Copyright (c) 2001-2004 Anton Altaparmakov.
  * Copyright (C) 2002 Richard Russon.
  *
  * This program/include file is free software; you can redistribute it and/or
@@ -179,11 +179,6 @@ extern void free_compression_buffers(void);
 extern int post_read_mst_fixup(NTFS_RECORD *b, const u32 size);
 extern int pre_write_mst_fixup(NTFS_RECORD *b, const u32 size);
 extern void post_write_mst_fixup(NTFS_RECORD *b);
-
-/* From fs/ntfs/time.c */
-extern inline s64 utc2ntfs(const time_t time);
-extern inline s64 get_current_ntfs_time(void);
-extern time_t ntfs2utc(const s64 time);
 
 /* From fs/ntfs/unistr.c */
 extern BOOL ntfs_are_names_equal(const uchar_t *s1, size_t s1_len,
